2009-08-21  Alberto Garcia  <agarcia@igalia.com>

	[Release 2.1.96]

	* configure.ac: bump version
	* NEWS: updates
	* debian/changelog: updates

2009-08-21  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-check-button.h
	* hildon/hildon-check-button.c
	(hildon_check_button_clicked, hildon_check_button_class_init):
	Make HildonCheckButton derive from GtkToggleButton
	(hildon_check_button_toggled, hildon_check_button_set_active)
	(hildon_check_button_get_active):
	Deprecate unnecessary HildonCheckButton API and use the
	one from GtkToggleButton instead.

	* hildon/hildon-set-password-dialog.c (create_contents)
	(hildon_set_password_response_change, hildon_checkbox_toggled)
	* examples/hildon-check-button-example.c (button_toggled_cb):
	Update to use the GtkToggleButton API

	Fixes: MB#4739 (HildonCheckButton should inherit from
	GtkToggleButton)

	Fixes: NB#132661 (HildonCheckButton should inherit from
	GtkToggleButton)

2009-08-20  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-pannable-area.c
	(hildon_pannable_area_class_init):
	Increase default value of HildonPannableArea:velocity_max to 2000

	Fixes: NB#132584 (Pannable kinetics in large lists needs tuning)

2009-08-18  Alberto Garcia  <agarcia@igalia.com>

	[Release 2.1.95]

	* configure.ac: bump version
	* NEWS: updates
	* debian/changelog: updates

2009-08-11  Alejandro G. Castro  <alex@igalia.com>

	* hildon/hildon-pannable-area.c
	(hildon_pannable_area_size_allocate): Checked the scrollbars
	before the first try when defining the layout, avoids two
	allocations in some situations.

	Fixes: NB#131794 (pannable area produces unnecessary allocations
	causing performance problems)

2009-08-11  Alejandro G. Castro  <alex@igalia.com>

	* hildon/hildon-pannable-area.c
	(hildon_pannable_area_button_press_cb),
	(hildon_pannable_area_motion_notify_cb),
	(hildon_pannable_area_button_release_cb): Added unrefs to reduce
	the spurious ref added in the copy, fixes leak of window.
